# ipython-postfix-completion

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
ipython_postfix_completion/: __init__.py
tests/: conftest.py  test_postfix_completion.py
